--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "graphqly",
-    "version": "0.1.4",
+    "version": "0.1.5",
     "description": "GraphQL made easy",
     "main": "index.js",
     "repository": {
@@ -16,12 +16,16 @@
     "scripts": {
         "test": "./node_modules/.bin/mocha --reporter spec"
     },
-    "keywords": ["GraphQL", "made", "easy"],
+    "keywords": [
+        "GraphQL",
+        "made",
+        "easy"
+    ],
     "dependencies": {
         "gql": "^1.1.2",
+        "graphql-subscriptions": "^0.4.4",
         "graphql-tools": "^1.1.0",
-        "lodash": "^4.17.4",
-        "react-apollo": "^1.4.2"
+        "lodash": "^4.17.4"
     },
     "devDependencies": {
         "chai": "^4.0.2",
