--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "gql": "^1.1.2",
         "graphql-subscriptions": "^0.4.4",
         "graphql-tools": "^1.1.0",
-        "lodash": "^4.17.4"
+        "lodash": "^4.17.4",
+        "winston": "^2.3.1"
     },
     "devDependencies": {
         "chai": "^4.0.2",
