Fixed a critical bug in parsing Resolvable names

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "graphqly",
-    "version": "0.1.10",
+    "version": "0.1.11",
     "description": "GraphQL made easy",
     "main": "index.js",
     "repository": {
@@ -16,11 +16,7 @@
     "scripts": {
         "test": "./node_modules/.bin/mocha --reporter spec"
     },
-    "keywords": [
-        "GraphQL",
-        "made",
-        "easy"
-    ],
+    "keywords": ["GraphQL", "made", "easy"],
     "dependencies": {
         "gql": "^1.1.2",
         "graphql-subscriptions": "^0.4.4",
